# clion-wxwidgets

./: .gitignore  CMakeLists.txt  README.md  main.cpp
